Added my implitation

--- a/index.html
+++ b/index.html
@@ -3,37 +3,57 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Favicons & App Icons -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.webmanifest" />
+
+  <!-- PWA Meta Tags -->
+  <meta name="application-name" content="GreenBuddy" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="GreenBuddy" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#22c55e" />
+  <meta name="msapplication-TileColor" content="#22c55e" />
+  <meta name="msapplication-TileImage" content="/android-chrome-192x192.png" />
+  <meta name="msapplication-config" content="none" />
+
   <!-- Primary Meta Tags -->
-  <title>ReLoop - Turn E-waste into Learning & Value</title>
-  <meta name="title" content="ReLoop - Turn E-waste into Learning & Value" />
+  <title>GreenBuddy – Turn E-waste into Learning &amp; Value</title>
+  <meta name="title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
   <meta name="description"
     content="AI-powered platform guiding students through e-waste teardowns. Learn electronics, harvest valuable components, and contribute to a circular economy with Gemini AI verification." />
   <meta name="keywords"
-    content="e-waste, recycling, electronics teardown, AI verification, sustainability, education, STEM, circular economy" />
-  <meta name="author" content="ReLoop" />
-  <meta name="theme-color" content="#F4BDB0" />
+    content="e-waste, recycling, electronics teardown, AI verification, sustainability, education, STEM, circular economy, GreenBuddy" />
+  <meta name="author" content="GreenBuddy" />
+  <meta name="color-scheme" content="dark" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://reloop-anti.vercel.app/" />
-  <meta property="og:title" content="ReLoop - Turn E-waste into Learning & Value" />
+  <meta property="og:url" content="https://greenbuddy.app/" />
+  <meta property="og:title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
   <meta property="og:description"
     content="AI-powered platform guiding students through e-waste teardowns. Learn electronics, harvest valuable components, and contribute to a circular economy." />
-  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image" content="/android-chrome-512x512.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://reloop-anti.vercel.app/" />
-  <meta property="twitter:title" content="ReLoop - Turn E-waste into Learning & Value" />
+  <meta property="twitter:url" content="https://greenbuddy.app/" />
+  <meta property="twitter:title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
   <meta property="twitter:description"
     content="AI-powered platform guiding students through e-waste teardowns with Gemini AI verification." />
-  <meta property="twitter:image" content="/og-image.png" />
+  <meta property="twitter:image" content="/android-chrome-512x512.png" />
 
-  <!-- Accessibility -->
-  <meta name="color-scheme" content="light" />
+  <!-- Preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 </head>
 
 <body>
