--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
   <meta name="msapplication-config" content="none" />
 
   <!-- Primary Meta Tags -->
-  <title>GreenBuddy – Turn E-waste into Learning &amp; Value</title>
-  <meta name="title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
+   <title>ReLoop - Turn E-waste into Learning & Value</title>
+  <meta name="title" content="ReLoop - Turn E-waste into Learning & Value" />
   <meta name="description"
     content="AI-powered platform guiding students through e-waste teardowns. Learn electronics, harvest valuable components, and contribute to a circular economy with Gemini AI verification." />
   <meta name="keywords"
-    content="e-waste, recycling, electronics teardown, AI verification, sustainability, education, STEM, circular economy, GreenBuddy" />
-  <meta name="author" content="GreenBuddy" />
-  <meta name="color-scheme" content="dark" />
+    content="e-waste, recycling, electronics teardown, AI verification, sustainability, education, STEM, circular economy" />
+  <meta name="author" content="ReLoop" />
+  <meta name="theme-color" content="#F4BDB0" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://greenbuddy.app/" />
-  <meta property="og:title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
+  <meta property="og:url" content="https://reloop-anti.vercel.app/" />
+  <meta property="og:title" content="ReLoop - Turn E-waste into Learning & Value" />
   <meta property="og:description"
     content="AI-powered platform guiding students through e-waste teardowns. Learn electronics, harvest valuable components, and contribute to a circular economy." />
   <meta property="og:image" content="/android-chrome-512x512.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://greenbuddy.app/" />
-  <meta property="twitter:title" content="GreenBuddy – Turn E-waste into Learning &amp; Value" />
+  <meta property="twitter:url" content="https://reloop-anti.vercel.app/" />
+  <meta property="twitter:title" content="ReLoop - Turn E-waste into Learning & Value" />
   <meta property="twitter:description"
     content="AI-powered platform guiding students through e-waste teardowns with Gemini AI verification." />
   <meta property="twitter:image" content="/android-chrome-512x512.png" />
